--- a/index.html
+++ b/index.html
@@ -1037,13 +1037,13 @@
           ],
             Microsoft: 
           [
-            { src: 'https://i.postimg.cc/nc3ZqNqH/ExcelWeb.png', link: 'https://m365.cloud.microsoft/launch/excel?auth=2&origindomain=microsoft365' },
-            { src: 'https://i.postimg.cc/0yrvnZC7/One-Drive-Web.png', link: 'https://onedrive.live.com/?id=root&cid=34B3A553B5B49BC1&qt=mru' },
-            { src: 'https://i.postimg.cc/vTQFVvBg/Outlook.png', link: 'https://outlook.office.com/mail/' },
-            { src: 'https://i.postimg.cc/tgxjQTwT/Power-Point-Web.png', link: 'https://m365.cloud.microsoft/launch/powerpoint?auth=2&origindomain=microsoft365' },
-            { src: 'https://i.postimg.cc/FHq4BcP8/TeamsWeb.png', link: 'https://teams.microsoft.com/v2/' },
-            { src: 'https://i.postimg.cc/k4PdnCPy/VisioWeb.png', link: 'https://m365.cloud.microsoft/launch/visio?auth=2&origindomain=microsoft365' },            
-            { src: 'https://i.postimg.cc/G2Pntfcn/WordWeb.png', link: 'https://m365.cloud.microsoft/launch/word?auth=2&origindomain=microsoft365' },
+            { src: 'Microsoft/ExcelWeb.png', link: 'https://m365.cloud.microsoft/launch/excel?auth=2&origindomain=microsoft365' },
+            { src: 'Microsoft/OneDriveWeb.png', link: 'https://onedrive.live.com/?id=root&cid=34B3A553B5B49BC1&qt=mru' },
+            { src: 'Microsoft/Outlook.png', link: 'https://outlook.office.com/mail/' },
+            { src: 'Microsoft/PowerPointWeb.png', link: 'https://m365.cloud.microsoft/launch/powerpoint?auth=2&origindomain=microsoft365' },
+            { src: 'Microsoft/TeamsWeb.png', link: 'https://teams.microsoft.com/v2/' },
+            { src: 'Microsoft/VisioWeb.png', link: 'https://m365.cloud.microsoft/launch/visio?auth=2&origindomain=microsoft365' },            
+            { src: 'Microsoft/WordWeb.png', link: 'https://m365.cloud.microsoft/launch/word?auth=2&origindomain=microsoft365' },
           ],
             Magasins: 
           [
