--- a/index.html
+++ b/index.html
@@ -1030,10 +1030,10 @@
           ],
             No_De_Permis: 
           [
-            { src: 'https://i.postimg.cc/rstyfjTh/Autochtones.jpg', link: 'https://www.quebec.ca/gouvernement/portrait-quebec/repertoire-municipalites' },
-            { src: 'https://i.postimg.cc/26ySZmKN/Infirmieres.png', link: 'https://www.oiiq.org/#/forms/new/?table=0x800000000000003D&form=0x8000000000000048&command=0x8000000000000827' },
-            { src: 'https://i.postimg.cc/N0p0FLbx/Medecins.png', link: 'https://www.cmq.org/fr/bottin/index.aspx?a=1&lang=fr' },            
-            { src: 'https://i.postimg.cc/bJ5N0M7D/Pharmaciens.png', link: 'https://www.opq.org/trouver-un-pharmacien/' }            
+            { src: 'No_de_permis/Autochtones.jpg', link: 'https://www.quebec.ca/gouvernement/portrait-quebec/repertoire-municipalites' },
+            { src: 'No_de_permis/Infirmieres.png', link: 'https://www.oiiq.org/#/forms/new/?table=0x800000000000003D&form=0x8000000000000048&command=0x8000000000000827' },
+            { src: 'No_de_permis/Medecins.png', link: 'https://www.cmq.org/fr/bottin/index.aspx?a=1&lang=fr' },            
+            { src: 'No_de_permis/Pharmaciens.png', link: 'https://www.opq.org/trouver-un-pharmacien/' }            
           ],
             Microsoft: 
           [
