--- a/index.html
+++ b/index.html
@@ -1063,7 +1063,7 @@
           ],
             Personnel: 
           [
-            { src: 'https://i.postimg.cc/h4xNS62C/Apple.png', link: 'https://www.apple.com/ca/fr/' },
+            { src: 'Personnel/Apple.png', link: 'https://www.apple.com/ca/fr/' },
             { src: 'Personnel/Banque-C-Tire.png', link: 'https://www.ctfs.com/content/ctfs3/fr/homepage.html' },
             { src: 'Personnel/beneva.jpg', link: 'https://client.secure.beneva.ca/?realm=/alpha&goto=https%3A%2F%2Ffidc-alpha.secure.beneva.ca%3A443%2Fam%2Foauth2%2Fauthorize%3Fresponse_type%3Dcode%26client_id%3DbnvPortalClient%26state%3DVnUyaWxYNDF1ZE9DSnRTcWhuQlBvQjEzVFFETDVGUmwyT1E0eXRjZWs3STU2%26redirect_uri%3Dhttps%3A%2F%2Fwwws.lacapitale.com%2Fforgerock-landing%26scope%3Dopenid%2520profile%26code_challenge%3DHD_DjfYAWxqiDjMbOnVpM6UhlnmP6j6RwWsSiaHXaSs%26code_challenge_method%3DS256%26nonce%3DVnUyaWxYNDF1ZE9DSnRTcWhuQlBvQjEzVFFETDVGUmwyT1E0eXRjZWs3STU2#/' },
             { src: 'Personnel/BNC.png', link: 'https://www.bnc.ca/' },
@@ -1072,33 +1072,33 @@
             { src: 'Personnel/CAA.png', link: 'https://www.caaquebec.com/fr' },
             { src: 'Personnel/CIBC.png', link: 'https://www.cibc.com/fr/personal-banking.html' },
             { src: 'Personnel/CompteTelus.png', link: 'https://www.telus.com/fr/residentiel' },
-            { src: 'https://i.postimg.cc/8Pd8b9WF/Dany-Gauthier.png', link: 'https://danygauthier.com/fr/boeuf--c6' },
-            { src: 'https://i.postimg.cc/FHhMCpgT/Dashlane.png', link: 'https://www.dashlane.com/fr' },
-            { src: 'https://i.postimg.cc/7ZXpFzKw/Eco-Securica.png', link: 'https://www.ecosecurica.com/' },
+            { src: 'Personnel/DanyGauthier.png', link: 'https://danygauthier.com/fr/boeuf--c6' },
+            { src: 'Personnel/Dashlane.png', link: 'https://www.dashlane.com/fr' },
+            { src: 'Personnel/EcoSecurica.png', link: 'https://www.ecosecurica.com/' },
             { src: 'Personnel/Facebook.png', link: 'https://www.facebook.com/' },
             { src: 'Personnel/FinanceIT.jpg', link: 'https://www.financeit.ca/fr/direct/account/login' },
-            { src: 'https://i.postimg.cc/0jp4cK6g/FrancoisCharron.jpg', link: 'https://francoischarron.com/' },
+            { src: 'Personnel/FrancoisCharron.jpg', link: 'https://francoischarron.com/' },
             { src: 'Personnel/FTQ.png', link: 'https://www.fondsftq.com/fr-ca/particuliers/mon-compte-en-ligne/connexion?titreMessageSucces=SuccesLogoutTitre' },
             { src: 'Personnel/GCSurplus.png', link: 'https://www.gcsurplus.ca/mn-fra.cfm?snc=wfsav&vndsld=0&fbclid=IwAR0r7kuUO2OgY9tIN54u1gjJdtUV7M09SDXKCHnJzdpRNllX5OC1PkLU5mw' },
-            { src: 'https://i.postimg.cc/0203SmRD/Gilles-Beaulieu-Services-Financiers.png', link: 'https://www.gillesbeaulieu.ca/' },
-            { src: 'https://i.postimg.cc/HLGbmX2W/Git-Hub-Logo.png', link: 'https://github.com/' },
+            { src: 'Personnel/Gilles-Beaulieu-Services-Financiers.png', link: 'https://www.gillesbeaulieu.ca/' },
+            { src: 'Personnel/Git-Hub-Logo.png', link: 'https://github.com/' },
             { src: 'Personnel/Google.png', link: 'https://www.google.com/' },
-            { src: 'https://i.postimg.cc/mgd5Xsrr/Lee-Valley.png', link: 'https://www.leevalley.com/fr-ca' },
-            { src: 'https://i.postimg.cc/FzQWdFTT/MDF-XL-Pages.png', link: 'https://www.mdf-xlpages.com/index.php' },
-            { src: 'https://i.postimg.cc/50zK2QSH/msn.png', link: 'https://www.msn.com/fr-ca?' },
-            { src: 'https://i.postimg.cc/ZqCDXM9x/Ninite.png', link: 'https://ninite.com/' },
+            { src: 'Personnel/Lee-Valley.png', link: 'https://www.leevalley.com/fr-ca' },
+            { src: 'Personnel/MDF-XL-Pages.png', link: 'https://www.mdf-xlpages.com/index.php' },
+            { src: 'Personnel/msn.png', link: 'https://www.msn.com/fr-ca?' },
+            { src: 'Personnel/Ninite.png', link: 'https://ninite.com/' },
             { src: 'Personnel/Paypal.png', link: 'https://www.paypal.com/fr/webapps/mpp/home' },
-            { src: 'https://i.postimg.cc/mkNdQxqB/Postes-Canada.jpg', link: 'https://www.canadapost-postescanada.ca/track-reperage/fr#/accueil' },
-            { src: 'https://i.postimg.cc/TYVc3Z6n/Postimage.png', link: 'https://postimages.org/'},
+            { src: 'Personnel/Postes-Canada.jpg', link: 'https://www.canadapost-postescanada.ca/track-reperage/fr#/accueil' },
+            { src: 'Personnel/Postimage.png', link: 'https://postimages.org/'},
             { src: 'Personnel/Purolator.png', link: 'https://www.purolator.com/fr' },
             { src: 'Personnel/RDPM.png', link: 'https://www.rdprm.gouv.qc.ca/Consultation/accueil' },
             { src: 'https://i.postimg.cc/GhK7tCGj/Registre-Des-Ventes.png', link: 'https://www.registredesventes.justice.gouv.qc.ca/?fbclid=IwAR0wodjqRr7BvgTnM86Gi-Bel6mMXD5mQb_zkzJcT1kcF6TXjwLOcjOwtQ0' },
             { src: 'Personnel/SAAQ.png', link: 'https://saaq.gouv.qc.ca/saaq/promotion-services/saaqclic' },
             { src: 'Personnel/SSQ.jpg', link: 'https://www.ssq.ca/fr' },
-            { src: 'https://i.postimg.cc/HLcB68KS/Storage-Review.png', link: 'https://www.storagereview.com/fr/' },
-            { src: 'https://i.postimg.cc/wBCFZTY9/Telus-TVPlus.png', link: 'https://telustvplus.com/#/' },
+            { src: 'Personnel/StorageReview.png', link: 'https://www.storagereview.com/fr/' },
+            { src: 'Personnel/Telustvplus.png', link: 'https://telustvplus.com/#/' },
             { src: 'Personnel/TouTV.png', link: 'https://ici.tou.tv/' },
-            { src: 'https://i.postimg.cc/T1G027PS/UMF-Manicouagan.png', link: 'https://umfmanic.portail.medfarsolutions.com/fr/login?redirect=https%3A%2F%2Fumfmanic.portail.medfarsolutions.com%2Ffr%2Fp%2F0%2Fmessages' },
+            { src: 'Personnel/UMF-Manicouagan.png', link: 'https://umfmanic.portail.medfarsolutions.com/fr/login?redirect=https%3A%2F%2Fumfmanic.portail.medfarsolutions.com%2Ffr%2Fp%2F0%2Fmessages' },
             { src: 'Personnel/UserBenchmark.png', link: 'https://www.userbenchmark.com/' },
             { src: 'Personnel/Youtube.png', link: 'https://www.youtube.com/' }
           ] // Ferme Personnel
