--- a/index.html
+++ b/index.html
@@ -1092,7 +1092,7 @@
             { src: 'Personnel/Postimage.png', link: 'https://postimages.org/'},
             { src: 'Personnel/Purolator.png', link: 'https://www.purolator.com/fr' },
             { src: 'Personnel/RDPM.png', link: 'https://www.rdprm.gouv.qc.ca/Consultation/accueil' },
-            { src: 'https://i.postimg.cc/GhK7tCGj/Registre-Des-Ventes.png', link: 'https://www.registredesventes.justice.gouv.qc.ca/?fbclid=IwAR0wodjqRr7BvgTnM86Gi-Bel6mMXD5mQb_zkzJcT1kcF6TXjwLOcjOwtQ0' },
+            { src: 'Personnel/Registre-Des-Ventes.png', link: 'https://www.registredesventes.justice.gouv.qc.ca/?fbclid=IwAR0wodjqRr7BvgTnM86Gi-Bel6mMXD5mQb_zkzJcT1kcF6TXjwLOcjOwtQ0' },
             { src: 'Personnel/SAAQ.png', link: 'https://saaq.gouv.qc.ca/saaq/promotion-services/saaqclic' },
             { src: 'Personnel/SSQ.jpg', link: 'https://www.ssq.ca/fr' },
             { src: 'Personnel/StorageReview.png', link: 'https://www.storagereview.com/fr/' },
