--- a/index.html
+++ b/index.html
@@ -1096,7 +1096,7 @@
             { src: 'Personnel/SAAQ.png', link: 'https://saaq.gouv.qc.ca/saaq/promotion-services/saaqclic' },
             { src: 'Personnel/SSQ.jpg', link: 'https://www.ssq.ca/fr' },
             { src: 'Personnel/StorageReview.png', link: 'https://www.storagereview.com/fr/' },
-            { src: 'Personnel/Telustvplus.png', link: 'https://telustvplus.com/#/' },
+            { src: 'Personnel/Telus-TVPlus.png', link: 'https://telustvplus.com/#/' },
             { src: 'Personnel/TouTV.png', link: 'https://ici.tou.tv/' },
             { src: 'Personnel/UMF-Manicouagan.png', link: 'https://umfmanic.portail.medfarsolutions.com/fr/login?redirect=https%3A%2F%2Fumfmanic.portail.medfarsolutions.com%2Ffr%2Fp%2F0%2Fmessages' },
             { src: 'Personnel/UserBenchmark.png', link: 'https://www.userbenchmark.com/' },
