--- a/index.html
+++ b/index.html
@@ -1072,6 +1072,8 @@
             { src: 'Personnel/CAA.png', link: 'https://www.caaquebec.com/fr' },
             { src: 'Personnel/CIBC.png', link: 'https://www.cibc.com/fr/personal-banking.html' },
             { src: 'Personnel/CompteTelus.png', link: 'https://www.telus.com/fr/residentiel' },
+
+            { src: 'Personnel/D2O.png', link: 'https://www.d2o-go.com/' },
             { src: 'Personnel/DanyGauthier.png', link: 'https://danygauthier.com/fr/boeuf--c6' },
             { src: 'Personnel/Dashlane.png', link: 'https://www.dashlane.com/fr' },
             { src: 'Personnel/EcoSecurica.png', link: 'https://www.ecosecurica.com/' },
