--- a/index.html
+++ b/index.html
@@ -1058,6 +1058,7 @@
             { src: 'Magasins/PotvinEtBouchard.png', link: 'https://www.potvinbouchard.ca/ca_fr/potvin-bouchard-jonquiere' },
             { src: 'Magasins/PrincessAuto.png', link: 'https://www.princessauto.com/fr_CA/store' },
             { src: 'Magasins/RONA.png', link: 'https://www.rona.ca/fr' },
+            { src: 'Magasins/SAQ.jpg', link: 'https://www.saq.com/fr/' },
             { src: 'Magasins/Tanguay.png', link: 'https://www.tanguay.ca/' },
             { src: 'Magasins/Walmart.png', link: 'https://walmart.ca/fr' }
           ],
@@ -1072,7 +1073,6 @@
             { src: 'Personnel/CAA.png', link: 'https://www.caaquebec.com/fr' },
             { src: 'Personnel/CIBC.png', link: 'https://www.cibc.com/fr/personal-banking.html' },
             { src: 'Personnel/CompteTelus.png', link: 'https://www.telus.com/fr/residentiel' },
-
             { src: 'Personnel/D2O.png', link: 'https://www.d2o-go.com/' },
             { src: 'Personnel/DanyGauthier.png', link: 'https://danygauthier.com/fr/boeuf--c6' },
             { src: 'Personnel/Dashlane.png', link: 'https://www.dashlane.com/fr' },
