--- a/index.html
+++ b/index.html
@@ -1072,6 +1072,7 @@
             { src: 'Personnel/Branchez-vous.png', link: 'https://branchez-vous.com/' },
             { src: 'Personnel/CAA.png', link: 'https://www.caaquebec.com/fr' },
             { src: 'Personnel/CIBC.png', link: 'https://www.cibc.com/fr/personal-banking.html' },
+            { src: 'Personnel/cloudflare.jpg', link: 'https://dash.cloudflare.com/21d4271b9360aaad65de6558bc3c7872/home/developer-platform' },
             { src: 'Personnel/CompteTelus.png', link: 'https://www.telus.com/fr/residentiel' },
             { src: 'Personnel/D2O.png', link: 'https://www.d2o-go.com/' },
             { src: 'Personnel/DanyGauthier.png', link: 'https://danygauthier.com/fr/boeuf--c6' },
