--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       position: sticky;
       top: 0;
       z-index: 1000;
-      /* background-color: #f4f4f4; /* ou une couleur qui contraste bien avec ton fond */
+      background-color: #f4f4f4; /* ou une couleur qui contraste bien avec ton fond */
       padding: 10px 0;
       box-shadow: 0 2px 5px rgba(0,0,0,0.1); /* optionnel, pour un effet visuel */
     }
