--- a/index.html
+++ b/index.html
@@ -26,6 +26,27 @@
       margin: 10px 0;
       justify-content: center;
     }
+    .gallery2 {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1000;
+  background-color: #f4f4f4;
+  padding: 10px 0;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+}
+    <div style="height: 90px;"></div> <!-- hauteur égale à celle de .gallery2 -->
+    
+.sub-gallery1, .sub-gallery2 {
+  max-height: calc(100vh - 100px); /* hauteur de l'écran moins la barre */
+  overflow-y: auto;
+  padding-top: 10px;
+}
+.sub-gallery1, .sub-gallery2 {
+  mask-image: linear-gradient(to bottom, black 80%, transparent 100%);
+}
+
     .thumbnail {
       width: 170px;
       height: 50px;
