--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   left: 0;
   width: 100%;
   z-index: 1000;
-  background-color: #f4f4f4;
+  /* background-color: #f4f4f4; */
   padding: 10px 0;
   box-shadow: 0 2px 5px rgba(0,0,0,0.1);
 }
