--- a/index.html
+++ b/index.html
@@ -391,7 +391,9 @@
     <!-- conteneurs -->
     <div id="subGallery1" class="sub-gallery1"></div>
     <div id="subGallery2" class="sub-gallery2"></div>
-  
+
+    <div style="height: 90px;"></div>
+
     <script>
       /* utilitaire */
       function clearContainer(el){ while(el.firstChild) el.removeChild(el.firstChild); }
