--- a/index.html
+++ b/index.html
@@ -46,6 +46,16 @@
 .sub-gallery1, .sub-gallery2 {
   mask-image: linear-gradient(to bottom, black 80%, transparent 100%);
 }
+#widgetMeteo {
+  position: fixed;
+  top: 100px; /* juste en dessous de la barre de vignettes */
+  right: 20px; /* ou left: 20px si tu préfères à gauche */
+  z-index: 999;
+  background-color: rgba(255, 255, 255, 0.9); /* fond semi-transparent */
+  padding: 10px;
+  border-radius: 8px;
+  box-shadow: 0 2px 8px rgba(0,0,0,0.2);
+}
 
     .thumbnail {
       width: 170px;
