--- a/index.html
+++ b/index.html
@@ -194,7 +194,16 @@
     .line-item {
       text-align: left;
     }
-  </style>
+    /* Fixe le haut de l'écran */
+    .fixed-top {
+      position: sticky;
+      top: 0;
+      background-color: rgba(0, 0, 0, 0.95);
+      z-index: 9999;
+      padding: 10px;
+    }
+
+</style>
 </head>
 
 <body>
@@ -249,6 +258,7 @@
     <!-- <div id="ww_0ae55ec744380" v='1.3' loc='id' a='{"t":"ticker","lang":"fr","sl_lpl":1,"ids":["wl4756"],"font":"Arial","sl_ics":"one_a","sl_sot":"celsius","cl_bkg":"image","cl_font":"#FFFFFF","cl_cloud":"#FFFFFF","cl_persp":"#81D4FA","cl_sun":"#FFC107","cl_moon":"#FFC107","cl_thund":"#FF5722"}'>Plus de prévisions: <a href="https://oneweather.org/calgary/30_days/" id="ww_0ae55ec744380_u" target="_blank">Weather forecast Calgary 30 days</a></div><script async src="https://app3.weatherwidget.org/js/?id=ww_0ae55ec744380"></script> -->
 
 <!-- Sélecteur de ville -->
+<div class="fixed-top">
 <div style="text-align:center; margin: 10px;">
   <label for="villeSelect" style="font-size:20px; color:white;">Choisir une ville :</label>
   <select id="villeSelect" onchange="changerVille()" style="font-size:20px; padding:5px;">
@@ -365,6 +375,7 @@
     <img src="Barre_navigation/Films.png" class="thumbnail" onclick="showSubGallery('Films','subGallery1')">
     <img src="Barre_navigation/Series.png" class="thumbnail" onclick="showSubGallery('Series','subGallery1')">
     </div>
+</div>
 
     <!-- conteneurs -->
     <div id="subGallery1" class="sub-gallery1"></div>
@@ -1289,7 +1300,7 @@
 
   <!-- —————  PIED DE PAGE  ————— -->
   <footer>
-    <p class="footer-left">🔹 Version 1.2</p>
+    <p class="footer-left">🔹 Version 1.3</p>
     <p class="footer-center">© 2025 Réal Martin - Tous droits réservés</p>
     <p class="footer-right"><span id="dateJour"></span></p>
   </footer>
@@ -1321,5 +1332,15 @@
       }
     });
   </script>
+
+  <!-- Liens centrés au bas de la page -->
+    <div style="text-align:center; margin-top:30px; font-size:18px;">
+    <p><a href="https://marrea63.github.io/RM-MonSiteWeb/index.html" style="color:rgb(255, 0, 0);" target="_blank">https://marrea63.github.io/RM-MonSiteWeb/index.html</a></p>
+    <p><a href="https://RM-monsiteweb.pages.dev" style="color:rgb(255, 0, 0);" target="_blank">https://RM-monsiteweb.pages.dev</a></p>
+    <br>
+    <br>
+    <br>
+    </div>
+
   </body>
 </html>
