--- a/index.html
+++ b/index.html
@@ -1335,8 +1335,8 @@
 
   <!-- Liens centrés au bas de la page -->
     <div style="text-align:center; margin-top:30px; font-size:18px;">
-    <p><a href="https://marrea63.github.io/RM-MonSiteWeb/index.html" style="color:rgb(255, 0, 0);" target="_blank">https://marrea63.github.io/RM-MonSiteWeb/index.html</a></p>
-    <p><a href="https://RM-monsiteweb.pages.dev" style="color:rgb(255, 0, 0);" target="_blank">https://RM-monsiteweb.pages.dev</a></p>
+    <p><a href="https://marrea63.github.io/RM-MonSiteWeb/index.html" style="color:rgb(255, 0, 0); font-weight:bold;" target="_blank">https://marrea63.github.io/RM-MonSiteWeb/index.html</a></p>
+    <p><a href="https://RM-monsiteweb.pages.dev" style="color:rgb(255, 0, 0); font-weight:bold;" target="_blank">https://RM-monsiteweb.pages.dev</a></p>
     <br>
     <br>
     <br>
