--- a/index.html
+++ b/index.html
@@ -276,6 +276,10 @@
   </select>
 </div>
 
+<div style="text-align:center; margin-top:20px; font-size:28px; color:#007bff; font-weight:bold;">
+  Bienvenue sur mon site personnel !
+</div>
+  
 <!-- Zone du widget météo -->
 <div id="widgetMeteo"></div>
 
