--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
   </select>
 </div>
 
-<div style="text-align:center; margin-top:10px; font-size:28px; color:#007bff; font-weight:bold;">
+<div style="text-align:center; margin-top:10px; margin-bottom: 10px; font-size:28px; color:#007bff; font-weight:bold;">
   Bienvenue sur mon site personnel !
 </div>
   
