--- a/index.html
+++ b/index.html
@@ -301,6 +301,7 @@
         data-label_1="BAIE-COMEAU"
         data-label_2="MÉTÉO"
         data-icons="Climacons Animated"
+        data-font="Verdana"
         data-theme="weather_one">
         data-accent="rgba(0, 255, 98, 0.02)" 
         data-highcolor="#ff6b6b" 
@@ -313,6 +314,7 @@
         data-label_1="JONQUIÈRE"
         data-label_2="MÉTÉO"
         data-icons="Climacons Animated"
+        data-font="Verdana"
         data-theme="weather_one">
         data-accent="rgba(0, 255, 98, 0.02)" 
         data-highcolor="#ff6b6b" 
@@ -325,6 +327,7 @@
         data-label_1="ALMA"
         data-label_2="MÉTÉO"
         data-icons="Climacons Animated"
+        data-font="Verdana"
         data-theme="weather_one">
         data-accent="rgba(0, 255, 98, 0.02)" 
         data-highcolor="#ff6b6b" 
@@ -337,6 +340,7 @@
         data-label_1="BEAUPRÉ"
         data-label_2="MÉTÉO"
         data-icons="Climacons Animated"
+        data-font="Verdana"
         data-theme="weather_one">
         data-accent="rgba(0, 255, 98, 0.02)" 
         data-highcolor="#ff6b6b" 
@@ -349,6 +353,7 @@
         data-label_1="QUÉBEC"
         data-label_2="MÉTÉO"
         data-icons="Climacons Animated"
+        data-font="Verdana"
         data-theme="weather_one">
         data-accent="rgba(0, 255, 98, 0.02)" 
         data-highcolor="#ff6b6b" 
