--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html lang="fr">
 <head>
+  <link rel="icon" href="Icone-Onglet.png" type="image/x-icon">
   <meta charset="UTF-8" />
   <title>Accueil</title>
   <!-- ────────────  C  S  S  ──────────── -->
