--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <link rel="icon" href="Icone-Onglet.png" type="image/x-icon">
   <meta charset="UTF-8" />
-  <title>Accueil</title>
+  <title>Mon Portail Personnel</title>
   <!-- ────────────  C  S  S  ──────────── -->
   <style>
     /* décor général */
