--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html lang="fr">
 <head>
-  <link rel="icon" href="Icone-Onglet.png" type="image/png">
+  <link rel="icon" href="Icone-Onglet.ico" type="image/x-icon">
   <meta charset="UTF-8" />
   <title>Mon Portail Personnel</title>
   <!-- ────────────  C  S  S  ──────────── -->
