--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
     }
     /* pied de page */
     footer {
+      font-size: 20px;
       position: fixed;
       bottom: 0;
       width: 100%;
@@ -1353,7 +1354,7 @@
   </script>
   <!-- —————  PIED DE PAGE  ————— -->
   <footer>
-    <p class="footer-left">🔹 Version 1.4</p>
+    <p class="footer-left">🔹 Version 1.5</p>
     <p class="footer-center">© 2025 Réal Martin - Tous droits réservés</p>
     <p class="footer-right"><span id="dateJour"></span></p>
   </footer>
@@ -1387,7 +1388,7 @@
     });
   </script>
   <!-- Liens centrés au bas de la page -->
-    <div style="text-align:center; margin-top:30px; font-size:20px;">
+    <div style="text-align:center; margin-top:30px; font-size:24px;">
     <p><a href="https://marrea63.github.io/RM-MonSiteWeb/index.html" style="color:rgb(255, 0, 0); font-weight:bold;" target="_blank">https://marrea63.github.io/RM-MonSiteWeb/index.html</a></p>
     <p><a href="https://RM-monsiteweb.pages.dev" style="color:rgb(255, 0, 0); font-weight:bold;" target="_blank">https://RM-monsiteweb.pages.dev</a></p>
     <br>
