--- a/index.html
+++ b/index.html
@@ -1130,6 +1130,7 @@
           [
             { src: 'Microsoft/ExcelWeb.png', link: 'https://m365.cloud.microsoft/launch/excel?auth=2&origindomain=microsoft365' },
             { src: 'Microsoft/OneDriveWeb.png', link: 'https://onedrive.live.com/?id=root&cid=34B3A553B5B49BC1&qt=mru' },
+            { src: 'Microsoft/OneNote.jpg', link: 'https://www.onenote.com/notebooks?auth=1' },
             { src: 'Microsoft/Outlook.png', link: 'https://outlook.office.com/mail/' },
             { src: 'Microsoft/PowerPointWeb.png', link: 'https://m365.cloud.microsoft/launch/powerpoint?auth=2&origindomain=microsoft365' },
             { src: 'Microsoft/TeamsWeb.png', link: 'https://teams.microsoft.com/v2/' },
