--- a/index.html
+++ b/index.html
@@ -1146,6 +1146,7 @@
           ], 
             Personnel: 
           [
+            { src: 'Personnel/AGA.png', link: 'https://adherents.aga.ca/fr/ouverture-de-session' },
             { src: 'Personnel/Apple.png', link: 'https://www.apple.com/ca/fr/' },
             { src: 'Personnel/Banque-C-Tire.png', link: 'https://www.ctfs.com/content/ctfs3/fr/homepage.html' },
             { src: 'Personnel/beneva.jpg', link: 'https://client.secure.beneva.ca/?realm=/alpha&goto=https%3A%2F%2Ffidc-alpha.secure.beneva.ca%3A443%2Fam%2Foauth2%2Fauthorize%3Fresponse_type%3Dcode%26client_id%3DbnvPortalClient%26state%3DVnUyaWxYNDF1ZE9DSnRTcWhuQlBvQjEzVFFETDVGUmwyT1E0eXRjZWs3STU2%26redirect_uri%3Dhttps%3A%2F%2Fwwws.lacapitale.com%2Fforgerock-landing%26scope%3Dopenid%2520profile%26code_challenge%3DHD_DjfYAWxqiDjMbOnVpM6UhlnmP6j6RwWsSiaHXaSs%26code_challenge_method%3DS256%26nonce%3DVnUyaWxYNDF1ZE9DSnRTcWhuQlBvQjEzVFFETDVGUmwyT1E0eXRjZWs3STU2#/' },
