Change image source from .png to .jpg

--- a/index.html
+++ b/index.html
@@ -1146,7 +1146,7 @@
           ], 
             Personnel: 
           [
-            { src: 'Personnel/Acces-Pharma.png', link: 'https://www.accespharma.ca/fr/pharmacie/3002-baie-comeau' },
+            { src: 'Personnel/Acces-Pharma.jpg', link: 'https://www.accespharma.ca/fr/pharmacie/3002-baie-comeau' },
             { src: 'Personnel/AGA.png', link: 'https://adherents.aga.ca/fr/ouverture-de-session' },
             { src: 'Personnel/Apple.png', link: 'https://www.apple.com/ca/fr/' },
             { src: 'Personnel/Banque-C-Tire.png', link: 'https://www.ctfs.com/content/ctfs3/fr/homepage.html' },
